...
                formattedAddress: ['742 Evergreen Terrace', 'Springfield, NT 49007'],
              },
            },
          },
          {
            name: 'Lisinopril 10mg',
            patientFriendlyName: { text: 'Lisinopril' },
            sig: 'Take 1 tablet by mouth daily for blood pressure',
            dateToDisplay: '06/01/2025',
            startDate: '06/01/2025',
            authorizingProvider: { name: 'Julius Hibbert, MD' },
            orderingProvider: { name: 'Julius Hibbert, MD' },
            isPatientReported: false,
...
